--- a/client/war/jerklib_gwt.html
+++ b/client/war/jerklib_gwt.html
@@ -11,19 +11,19 @@
     <!--                                                               -->
     <!-- Consider inlining CSS to reduce the number of requested files -->
     <!--                                                               -->
-    <link type="text/css" rel="stylesheet" href="CakeIRC.css">
+    <link type="text/css" rel="stylesheet" href="jerklib_gwt.css">
 
     <!--                                           -->
     <!-- Any title is fine                         -->
     <!--                                           -->
-    <title>Web Application Starter Project</title>
+    <title>Jerklib-gwt console</title>
     
     <!--                                           -->
     <!-- This script loads your compiled module.   -->
     <!-- If you add any GWT meta tags, they must   -->
     <!-- be added before this line.                -->
     <!--                                           -->
-    <script type="text/javascript" language="javascript" src="cakeirc/cakeirc.nocache.js"></script>
+    <script type="text/javascript" language="javascript" src="jerklib_gwt/jerklib_gwt.nocache.js"></script>
   </head>
 
   <!--                                           -->
